// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast renders correctly 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  background-color: #272E33;
  width: 415px;
  height: 72px;
  box-shadow: active;
  border-radius: 6px;
  color: white;
  padding: 4px;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 29.33px;
  height: 29.33px;
  margin: 20px 15px;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: primary;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin: auto;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
  color: white;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 16px;
  height: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media screen and (min-width:40em) {

}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <i
      className="icon-check"
      style={
        Object {
          "bottom": "0px",
          "fontSize": "29.33px",
          "height": "29.33px",
          "left": "-0.5px",
          "position": "absolute",
          "right": "0px",
          "top": "-1px",
          "width": "29.33px",
        }
      }
    />
  </div>
  <p
    className="c3"
    display="flex"
  >
    Seleccione una propiedad
  </p>
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <button
        className="c6"
        color="white"
        onClick={[Function]}
      >
        <div
          className="c7"
        >
          <i
            className="icon-cerrar"
            style={
              Object {
                "bottom": "0px",
                "fontSize": "16px",
                "height": "16px",
                "left": "-0.5px",
                "position": "absolute",
                "right": "0px",
                "top": "-1px",
                "width": "16px",
              }
            }
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Toast renders correctly five 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  background-color: #272E33;
  width: 415px;
  height: 72px;
  box-shadow: active;
  border-radius: 6px;
  color: white;
  padding: 4px;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 29.33px;
  height: 29.33px;
  margin: 20px 15px;
  color: #00D186;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: primary;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-weight: bold;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: normal;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
  margin: 20px 15px 20px 40px;
  color: white;
  font-size: 14px;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 12px;
  height: 12px;
}

.c8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin: auto;
}

.c9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
  color: white;
}

.c10 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 16px;
  height: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media screen and (min-width:40em) {

}

<div
  className="c0 c1"
>
  <div
    className="c2"
    display="flex"
  >
    <div
      className="c3"
      color="#00D186"
    >
      <i
        className="icon-check"
        style={
          Object {
            "bottom": "0px",
            "fontSize": "29.33px",
            "height": "29.33px",
            "left": "-0.5px",
            "position": "absolute",
            "right": "0px",
            "top": "-1px",
            "width": "29.33px",
          }
        }
      />
    </div>
    <p
      className="c4"
      display="flex"
      fontWeight="bold"
    >
      Report export ready!
    </p>
    <div
      className="c5"
    >
      <button
        className="c6"
        color="white"
        fontSize="14px"
        onClick={[Function]}
      >
        <div
          className="c7"
        >
          <i
            className="icon-descargar"
            style={
              Object {
                "bottom": "0px",
                "fontSize": "12px",
                "height": "12px",
                "left": "-0.5px",
                "position": "absolute",
                "right": "0px",
                "top": "-1px",
                "width": "12px",
              }
            }
          />
        </div>
        <span>
          Descargar
        </span>
      </button>
    </div>
  </div>
  <div
    className="c8"
  >
    <div
      className="c5"
    >
      <button
        className="c9"
        color="white"
        onClick={[Function]}
      >
        <div
          className="c10"
        >
          <i
            className="icon-cerrar"
            style={
              Object {
                "bottom": "0px",
                "fontSize": "16px",
                "height": "16px",
                "left": "-0.5px",
                "position": "absolute",
                "right": "0px",
                "top": "-1px",
                "width": "16px",
              }
            }
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Toast renders correctly four 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  background-color: #272E33;
  width: 415px;
  height: 72px;
  box-shadow: active;
  border-radius: 6px;
  color: white;
  padding: 4px;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 10px;
  margin: 17px 15px;
  width: small;
  height: small;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: primary;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin: auto;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
  color: white;
}

.c9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 16px;
  height: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  width: 2em;
  height: 2em;
  padding: 8px;
  border-radius: 50%;
  background-image: conic-gradient(#272E33,#FFFFFF);
  -webkit-animation: bCrGrT 1s ease 0s infinite;
  animation: bCrGrT 1s ease 0s infinite;
  -webkit-clip-path: circle(80px at center);
  clip-path: circle(80px at center);
  -webkit-mask-image: radial-gradient(circle at center,transparent 54%,black 54.8%);
  -webkit-mask-image: radial-gradient(circle at center,transparent 54%,black 54.8%);
  mask-image: radial-gradient(circle at center,transparent 54%,black 54.8%);
}

@media screen and (min-width:40em) {

}

<div
  className="c0 c1"
>
  <loader
    className="c2"
  >
    <div
      className="c3 c4"
      kind="primary"
      size="small"
    />
  </loader>
  <p
    className="c5"
    display="flex"
  >
    Cargando...
  </p>
  <div
    className="c6"
  >
    <div
      className="c7"
    >
      <button
        className="c8"
        color="white"
        onClick={[Function]}
      >
        <div
          className="c9"
        >
          <i
            className="icon-cerrar"
            style={
              Object {
                "bottom": "0px",
                "fontSize": "16px",
                "height": "16px",
                "left": "-0.5px",
                "position": "absolute",
                "right": "0px",
                "top": "-1px",
                "width": "16px",
              }
            }
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Toast renders correctly four 2`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  background-color: #272E33;
  width: 415px;
  height: 72px;
  box-shadow: active;
  border-radius: 6px;
  color: white;
  padding: 4px;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin-right: 10px;
  margin: 17px 15px;
  width: small;
  height: small;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: primary;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin: auto;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c8 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
  color: white;
}

.c9 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 16px;
  height: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c4 {
  width: 2em;
  height: 2em;
  padding: 8px;
  border-radius: 50%;
  background-image: conic-gradient(#272E33,#FFFFFF);
  -webkit-animation: bCrGrT 1s ease 0s infinite;
  animation: bCrGrT 1s ease 0s infinite;
  -webkit-clip-path: circle(80px at center);
  clip-path: circle(80px at center);
  -webkit-mask-image: radial-gradient(circle at center,transparent 54%,black 54.8%);
  -webkit-mask-image: radial-gradient(circle at center,transparent 54%,black 54.8%);
  mask-image: radial-gradient(circle at center,transparent 54%,black 54.8%);
}

@media screen and (min-width:40em) {

}

<div
  className="c0 c1"
>
  <loader
    className="c2"
  >
    <div
      className="c3 c4"
      kind="primary"
      size="small"
    />
  </loader>
  <p
    className="c5"
    display="flex"
  >
    Exportando...
  </p>
  <div
    className="c6"
  >
    <div
      className="c7"
    >
      <button
        className="c8"
        color="white"
        onClick={[Function]}
      >
        <div
          className="c9"
        >
          <i
            className="icon-cerrar"
            style={
              Object {
                "bottom": "0px",
                "fontSize": "16px",
                "height": "16px",
                "left": "-0.5px",
                "position": "absolute",
                "right": "0px",
                "top": "-1px",
                "width": "16px",
              }
            }
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Toast renders correctly three 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  background-color: #272E33;
  width: 415px;
  height: 72px;
  box-shadow: active;
  border-radius: 6px;
  color: white;
  padding: 4px;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 29.33px;
  height: 29.33px;
  margin: 18px 15px;
  color: #00D186;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: primary;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin: auto;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
  color: white;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 16px;
  height: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media screen and (min-width:40em) {

}

<div
  className="c0 c1"
>
  <div
    className="c2"
    color="#00D186"
  >
    <i
      className="icon-check"
      style={
        Object {
          "bottom": "0px",
          "fontSize": "29.33px",
          "height": "29.33px",
          "left": "-0.5px",
          "position": "absolute",
          "right": "0px",
          "top": "-1px",
          "width": "29.33px",
        }
      }
    />
  </div>
  <p
    className="c3"
    display="flex"
  >
    Success message
  </p>
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <button
        className="c6"
        color="white"
        onClick={[Function]}
      >
        <div
          className="c7"
        >
          <i
            className="icon-cerrar"
            style={
              Object {
                "bottom": "0px",
                "fontSize": "16px",
                "height": "16px",
                "left": "-0.5px",
                "position": "absolute",
                "right": "0px",
                "top": "-1px",
                "width": "16px",
              }
            }
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Toast renders correctly two 1`] = `
.c0 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  background-color: #272E33;
  width: 415px;
  height: 72px;
  box-shadow: active;
  border-radius: 6px;
  color: white;
  padding: 4px;
}

.c2 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 29.33px;
  height: 29.33px;
  margin: 20px 15px;
  color: #A2B5F7;
}

.c3 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  font-family: primary;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c4 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  margin: auto;
}

.c5 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
}

.c6 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  line-height: inherit;
  font-family: Nunito Sans;
  font-weight: bold;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  border: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  position: relative;
  color: white;
}

.c7 {
  box-sizing: border-box;
  margin: 0;
  min-width: 0;
  position: relative;
  width: 16px;
  height: 16px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

@media screen and (min-width:40em) {

}

<div
  className="c0 c1"
>
  <div
    className="c2"
    color="#A2B5F7"
  >
    <i
      className="icon-alertas"
      style={
        Object {
          "bottom": "0px",
          "fontSize": "29.33px",
          "height": "29.33px",
          "left": "-0.5px",
          "position": "absolute",
          "right": "0px",
          "top": "-1px",
          "width": "29.33px",
        }
      }
    />
  </div>
  <p
    className="c3"
    display="flex"
  >
    Alert message
  </p>
  <div
    className="c4"
  >
    <div
      className="c5"
    >
      <button
        className="c6"
        color="white"
        onClick={[Function]}
      >
        <div
          className="c7"
        >
          <i
            className="icon-cerrar"
            style={
              Object {
                "bottom": "0px",
                "fontSize": "16px",
                "height": "16px",
                "left": "-0.5px",
                "position": "absolute",
                "right": "0px",
                "top": "-1px",
                "width": "16px",
              }
            }
          />
        </div>
      </button>
    </div>
  </div>
</div>
`;
